[OS] migration V2